2003-10-01  Matthias Clasen  <maclas@gmx.de>

	Make signals and properties end up in the right template 
	file (#116569, Owen Taylor):

	* gtkdoc-mktmpl.in (OutputSignalTemplates): 
	(OutputArgTemplates): Return a string rather than directly 
	writing to OUTPUT. 
	(OutputTemplateFile): Don't interpret $title as the name of 
	the object to print signal and property templates for.
	(UpdateTemplates): Collect signal and property templates for all
	objects contained in the section.

2003-08-10  James Henstridge  <james@daa.com.au>

	* acinclude.m4 (JH_PATH_XML_CATALOG): allow caller to specify
	actions if found or not found.
	(JH_CHECK_XML_CATALOG): when requiring JH_PATH_XML_CATALOG, don't
	error out if it is not found.

2003-08-03  Matthias Clasen  <maclas@gmx.de>

	* doc/gnome.txt: Add some hints regarding markup of examples. 

2003-07-22  Matthias Clasen  <maclas@gmx.de>

	* configure.in: 
	* gtk-doc.cat: Fix a problem with the previous commit.

2003-07-21  Matthias Clasen  <maclas@gmx.de>

	Applied patches from Sebastian Rittau to add maintainer mode and an SGML catalog.  (#117955, #117956)

	* gtk-doc.cat.in: New catalog file.
	* configure.in: Added gtk-doc.catalog to output files.
	* Makefile.am: Install gtk-doc.catalog.

	* configure.in: Added AM_MAINTAINER_MODE.
	* autogen.sh: Added --enable-maintainer-mode to configure options.

2003-07-09  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mktmpl.in (ParseStructDeclaration): 
	* gtkdoc-mkdb.in (ParseStructDeclaration): Accept volatile struct members, which have just
	made their appearance in glib.

2003-06-29  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (ExpandAbbreviations): When expanding @param, catch the common @param->field
	and @param.field, to reduce the need for littering the C sources with <literal>foo->bar</literal>.

2003-06-25  Matthias Clasen  <maclas@gmx.de>

	Changes for #115528:
	
	* gtkdoc-mkdb.in (OutputSGML): Collect hierarchy, interfaces, implementations, prerequisites